--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@editorjs/table": "^2.2.1",
     "@hookform/resolvers": "^3.1.0",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-accessible-icon": "^1.0.2",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.3",
@@ -56,6 +56,7 @@
     "@radix-ui/react-toggle": "^1.0.2",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.5",
+    "@supabase/supabase-js": "^2.45.0",
     "@t3-oss/env-nextjs": "^0.2.2",
     "@typescript-eslint/parser": "^5.59.0",
     "@vercel/analytics": "^1.0.0",
@@ -108,7 +109,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "pretty-quick": "^3.1.3",
-    "prisma": "^4.13.0",
+    "prisma": "^5.17.0",
     "rehype": "^12.0.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.9.5",
