--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "concurrently": "^8.0.1",
     "contentlayer": "^0.3.1",
     "date-fns": "^2.29.3",
+    "framer-motion": "^11.3.21",
     "lucide-react": "^0.92.0",
     "next": "13.3.2-canary.13",
     "next-auth": "4.22.1",
